# evm-asm

./: CONTRIBUTING.md  LICENSE  README.md  ethervm.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: test.yaml
evm_asm/: __init__.py  assembler.py  errors.py  opcode.py  typing.py
evm_asm/forks/: __init__.py  base.py  byzantium.py  constantinople.py  fork_base.py  forks.py  frontier.py  homestead.py  istanbul.py  muir_glacier.py  petersburg.py  spurious_dragon.py  tangerine_whistle.py
evm_asm/opcodes/: opcode.py
forks/: byzantium.py  constantinople.py  fork_base.py  forks.py  frontier.py  homestead.py  istanbul.py  muir_glacier.py  petersburg.py  spurious_dragon.py  tangerine_whistle.py
opcodes/: opcode.py
tests/: __init__.py  conftest.py  test_assembly.py  test_opcodes.py
tools/: fork_gen.py
