[metadata]
license_files = LICENSE

[aliases]
test = pytest

[flake8]
max-line-length = 100
exclude =
	venv*
	.tox
	docs
	build

[tool:isort]
force_grid_wrap = 0
include_trailing_comma = True
known_third_party = setuptools
known_first_party = evm_asm
multi_line_output = 3
use_parentheses = True

[tool:pytest]
addopts = -n auto
	--cov-branch
	--cov-report term
	--cov-report html
	--cov-report xml
	--cov=evm_asm
python_files = test_*.py
testpaths = tests
markers =
	fuzzing: Run Hypothesis fuzz test suite (deselect with '-m "not fuzzing"')